--- a/estilos/index.css
+++ b/estilos/index.css
@@ -64,7 +64,7 @@ li {
     
 }
 
-.hola {
+.menu {
     transition: 400ms ease-in-out;
 }
 
@@ -75,7 +75,7 @@ ul {
     background-color: rgb(119, 0, 0);
 }
 
-.hola:hover {
+.menu:hover {
     transform:translateY(-60px);
     cursor: pointer;
     background-color: rgb(119, 0, 0);
@@ -116,24 +116,22 @@ footer {
     font-size: 1rem;
     /* border: 8px solid rgb(190, 0, 0); */
     height: 100%;
-    transform: translateY(-30px);
+    transform: translateY(-35px);
 }
 .contenedor-izq2 {
     justify-items: right;
 }
 
-.contenedor-der {
+.contenedor-der2, .contenedor-der5 {
     /* border: 8px solid red; */
     width: 80%;
-    height: 100%;
+    height: 455px;
     color: #fff;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    
-
 }
 
-.contenedor-der2 {
+.contenedor-der3, .contenedor-der6 {
     padding: 5% 10% 0 10%;
 }
 
@@ -142,8 +140,7 @@ footer {
     font-family: Bills-Mafia;
     font-weight: lighter;
     font-size: 1.5rem;
-    text-align: center;
-    padding: 1%;
+    padding: 0 0 0 5%;
 }
 
 
@@ -173,7 +170,7 @@ button:hover {
     color: rgb(255, 255, 255);
 }
 
-.presentacion {
+.presentacion, .descServicio {
     color: rgb(255, 255, 255);
     text-align: justify;
     padding: 5% 0 15% 0;
@@ -181,7 +178,7 @@ button:hover {
     
 }
 
-.nombre {
+.nombre, .servicio {
     text-align: center;
     font-family: Bills-Mafia;
     font-size: 4rem;
@@ -194,4 +191,29 @@ button:hover {
     
 }
 
+
+
+
+.boton-servicio {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+}
+
+.boton-servicio:hover{
+    background-color: rgb(240, 224, 198);
+}
+
+.botones-servicios {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+}
+
+.seccion-principal {
+    display: none;
+}
 
