--- a/estilos/index.css
+++ b/estilos/index.css
@@ -103,6 +103,14 @@ footer {
     width: auto;
 }
 
+.contenedor-sedes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+    font-weight: lighter;
+    width: auto;
+}
+
 .contenedor-izq {
     display: grid;
     grid-template-rows: 1fr 1fr;
@@ -218,7 +226,96 @@ button:hover {
     gap: 10px;
 }
 
+
+
 .seccion-principal {
     display: none;
 }
 
+
+h3 {
+    color: rgb(255, 255, 255);
+    font-family: Bills-Mafia;
+    font-weight: lighter;
+    font-size: 1.5rem;
+
+}
+
+.contenedor-sedes {
+    display: grid;
+    place-items: center;
+}
+
+.contenedor-sedes-izq {
+    height: auto;
+    padding: 3%;
+    width: 85%;
+    justify-items: center;
+
+}
+
+.nombre-sede, .titulo-direccion, .titulo-telefono {
+    color: red;
+    font-size: large;
+}
+
+.Direccion, .Telefono {
+    color: white;
+}
+
+.icono-sede{
+    background-image: url("../assets/svg/barber-shop.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    border-radius: 100%;
+}
+
+.sedes {
+    transition: 350ms ease-in-out;
+    height: 100%;
+    width: 100%;
+    font-size: 0.8rem;
+    background-color: rgb(0, 0, 0);
+    border-radius: 25px;
+    padding: 2%;
+    display: grid;
+    grid-template-columns: 1fr 7fr;
+    gap: 20px;
+    margin: 15px 0 15px 0; 
+}
+
+.sedes:hover {
+    transform: scale(1.1);
+    background-color: aliceblue;
+    cursor: pointer;
+}
+
+
+.sedes:hover  .Direccion, .sedes:hover .Telefono {
+    color: rgb(0, 0, 0);
+    transition: 350ms ease-in-out;
+}
+
+h3 {
+    text-align: center;
+}
+
+
+#map {
+    width: 800px;       
+    height: 540px;        
+    border: 2px solid #333;  
+    border-radius: 10px;     
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    display: block;            
+    margin: 20px auto;          
+  }
+  
+  
+  #map:hover {
+    border-color: #d32f2f;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); 
+  }
