--- a/estilos/index.css
+++ b/estilos/index.css
@@ -65,7 +65,7 @@ li {
 }
 
 .menu {
-    transition: 400ms ease-in-out;
+    transition: 250ms ease-in-out;
 }
 
 
@@ -76,10 +76,10 @@ ul {
 }
 
 .menu:hover {
-    transform:translateY(-60px);
+    transform: scale(1.2);
     cursor: pointer;
     background-color: rgb(119, 0, 0);
-    border-radius: 25px 25px 0 0;
+    border-radius: 25px;
 }
 
 footer {
@@ -247,10 +247,9 @@ h3 {
 }
 
 .contenedor-sedes-izq {
-    height: auto;
-    padding: 3%;
+    height: 450px;
     width: 85%;
-    justify-items: center;
+    transform: translateY(-70px);
 
 }
 
@@ -275,15 +274,13 @@ h3 {
 
 .sedes {
     transition: 350ms ease-in-out;
-    height: 100%;
-    width: 100%;
     font-size: 0.8rem;
     background-color: rgb(0, 0, 0);
     border-radius: 25px;
     padding: 2%;
     display: grid;
     grid-template-columns: 1fr 7fr;
-    gap: 20px;
+    gap: 0px;
     margin: 15px 0 15px 0; 
 }
 
@@ -301,6 +298,7 @@ h3 {
 
 h3 {
     text-align: center;
+    font-size: 1.5rem;
 }
 
 
