--- a/estilos/index.css
+++ b/estilos/index.css
@@ -125,9 +125,12 @@ footer {
     /* border: 8px solid rgb(190, 0, 0); */
     height: 100%;
     transform: translateY(-35px);
+    /* border: solid 4px white; */
+    
 }
 .contenedor-izq2 {
     justify-items: right;
+    
 }
 
 .contenedor-der2, .contenedor-der5 {
@@ -137,6 +140,7 @@ footer {
     color: #fff;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    
 }
 
 .contenedor-der3, .contenedor-der6 {
@@ -317,3 +321,77 @@ h3 {
     border-color: #d32f2f;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); 
   }
+
+
+
+
+  .boton {
+    background-color: rgb(190, 0, 0);
+    color: rgb(255, 255, 255);
+    font-family: cursiva;
+    font-size: 3rem;
+    border-radius: 25px;
+    width: auto;
+    margin: 1%;
+    padding: 0.5% 4% 0.5% 4%;
+    transition: 300ms ease-in-out;
+    border: none;
+    margin: 0 0 4%;
+}
+
+.boton:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+    outline: #fff solid 1px;
+}
+
+.contenedor-formulario-contacto {
+    width: 100%;
+    height: 380px;
+    text-align: center;
+    /* background-color: aqua; */
+    justify-items: center;
+   
+}
+
+.inp {
+    border-radius: 15px;
+    padding: 0 0 0 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ff858541;
+    color: white;
+    height: 40px;
+    border: none;
+    
+    
+    
+}
+
+.inp2 {
+    border-radius: 15px;
+    padding: 0 0 0 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ff858541;
+    color: white;
+    border: none;
+    
+}
+
+.inp::placeholder, .inp2::placeholder  {
+    color: white;
+    opacity: .8;
+}
+
+.formulario {
+    /* background-color: #333; */
+    border-radius: 25px;
+    padding: 30px 0;
+    width: 20%;
+    border: solid 3px white;
+    box-shadow: 0 0 20px rgba(253, 0, 0, 0.5);
+    background-color: #ffffff07;
+}
+
+:focus {
+    outline: 1px solid white;
+}
