--- a/estilos/index.css
+++ b/estilos/index.css
@@ -403,7 +403,7 @@ h3 {
 
 /*Parte responsive*/
 
-@media (max-width: 476px) {
+@media (max-width: 430px) {
 
     .titulo {
         font-size: 2rem;
@@ -475,7 +475,7 @@ h3 {
     }
     
     .contenedor-der3 {
-        width: 100%;
+        padding: 0;
     }
 
     .firma {
