--- a/estilos/index.css
+++ b/estilos/index.css
@@ -419,9 +419,6 @@ h3 {
     .titulo {
         font-size: 10vw;
     }
-
-    
-
     .logo{
         height: 30vw;
         width: auto;
@@ -540,6 +537,12 @@ h3 {
         padding: 0;
         margin: 0;
     }
+
+    body {
+        height: 240vw;
+    }
+    
+
 
 
 }
