--- a/estilos/index.css
+++ b/estilos/index.css
@@ -379,6 +379,11 @@ h3 {
     background-color: #ff858541;
     color: white;
     border: none;
+    max-width: 90%;
+    max-height: 150px;
+    min-width: 90%;
+    min-height: 150px;
+
     
 }
 
@@ -469,12 +474,21 @@ h3 {
         padding: 1% 2% 2%;
     }
 
-    .contenedor-der2 {
+    .contenedor-der2, .contenedor-der5 {
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 100%;
         height: auto;
+    }
+
+    .contenedor-der6 {
+        padding: 2%;
+    }
+
+    .descServicio {
+        padding: 2% 0 2% 0;
+        font-size: 3.5vw;
     }
 
     .contenedor-der1 {
@@ -483,12 +497,16 @@ h3 {
     }
 
 
-    .nombre {
+    .nombre, .servicio {
         font-size: 8vw;
     }
     
     .contenedor-der3 {
         padding: 0;
+    }
+
+    .agendaCita {
+        display: none;
     }
 
     .firma {
@@ -509,7 +527,7 @@ h3 {
     } 
 
 
-    .foto {
+    .foto, .foto-servicio {
         width: 50vw;
         height: 50vw;
         
@@ -542,6 +560,102 @@ h3 {
     body {
         height: 240vw;
     }
+
+
+    /*pagina servicios*/
+
+    .botones-servicios {
+        max-width: auto;
+        justify-items: center;
+        padding: 0 10% 0 10%;
+        
+    }
+
+    #seccion-2 {
+        height: 100%;
+    }
+
+
+    /*pagina sedes*/
+
+    
+    .contenedor-sedes-der {
+        width: 95%;
+        padding: 0 0 0 0;
+        /* padding: 70px 0 40px 0; */
+    }
+
+    #map {
+        max-width: 80vw;
+        max-height: 80vw;
+        /* transform: translateY(60px); */
+     } 
+
+    .contenedor-sedes {
+        display: flex;
+        flex-direction: column;
+        /* padding: 70px 0 0 0; */
+    }
+
+    .contenedor-sedes-izq {
+        height: auto;
+        padding: 15% 0 0 0;
+        /* transform: translateY(10px); */
+    }
+
+    menu {
+        padding: 0;
+    }
+
+    .icono-sede {
+        width: 15vw;
+        height: 15vw;
+        background-position: center;
+    }
+
+    h3 {
+        font-size: 6vw;
+    }
+
+    .nombre-sede, .titulo-direccion, .titulo-telefono {
+        font-size: 4.5vw;
+
+    }
+
+    .Direccion, .Telefono {
+        font-size: 3.5vw
+    }
+
+    .sedes {
+        height: auto;
+        align-items: center;
+        gap: 4%;
+    }
+
+    #seccion-3 {
+        height: auto;
+        padding: 0 0 10% 0;
+    }
+
+
+    /*seccion-4*/
+
+    .formulario {
+        width: 90%;
+        padding: 4% 2% 0 2%;
+    }
+
+    .contenedor-formulario-contacto {
+        padding: 2% 0;
+    }
+
+    #seccion-4 {
+        height: auto;
+        padding: 0 0 10% 0;
+    }
+
+
+    
     
 
 
